--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,10 @@
 html,
 body {
+  background-color: black;
+  background-image: radial-gradient(#ff0000b4 1px, transparent 1px),
+    radial-gradient(#ff0000b4 1px, transparent 1px);
+  background-position: 0 0, 25px 25px;
+  background-size: 50px 50px;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
